--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ PLOT_POINTS=1000
 PORT=
 BAUDRATE=19200
 TRM_ADDRESS=1
+TRM_UPDATE_PERIOD=5
+PORT_TIMEOUT=0.5
 MCP4725_ADDRESS=
 RELAY_1_PIN=
 RELAY_2_PIN=
