add request delay

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ BAUDRATE=19200
 TRM_ADDRESS=1
 TRM_UPDATE_PERIOD=5
 PORT_TIMEOUT=0.5
+REQUEST_DELAY=0.01
 MCP4725_ADDRESS=
 RELAY_1_PIN=
 RELAY_2_PIN=
